--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
 	    <meta name="description" content=”Peridot Gem Event Planning.”>
 	    <meta name="keywords" content="Brooklyn, Events, New York, Planning">
 	    <meta http-equiv="x-ua-compatible" content="ie=edge">
-	    <meta name="image_src" content="http://graysenterprise.com/images/favicon.png" />
-	    <meta name="image_url" content="http://graysenterprise.com/images/favicon.png" />
-	    <meta property=”url” content=”http://graysenterprise.com” />
-	    <link rel="icon" type="image/png" href="http://graysenterprise.com/images/favicon.png">
+	    <meta name="image_src" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
+	    <meta name="image_url" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
+	    <meta property=”url” content=”http://peridotgemevents.com” />
+	    <link rel="icon" type="image/png" href="http://images-media.info/images/peridotgemevents/img/favicon.png">
 
 
 	    <!-- SEO meta tags - OpenGraph-->
 	    <meta property=”og:type” content=”website” />
 	    <meta property=”og:title” content=”Peridot Gem Event Planning Company Home Page.” />
 	    <meta property=”og:description” content=”Peridot Gem Event Planning ” />
-	    <meta property="og:image" content="http://graysenterprise.com/images/favicon.png"/>
+	    <meta property="og:image" content="http://images-media.info/images/peridotgemevents/img/favicon.png"/>
 	    <meta property="og:image:height" content="100" />
 	    <meta property="og:image:width" content="100" />
-	    <meta property=”og:url” content=”http://graysenterprise.com” />
+	    <meta property=”og:url” content=”http://peridotgemevents.com” />
 	    <meta property=”og:site_name” content=”Peridot Gem Event Planning ” />   
 
 	    <!-- SEO meta tags - Twitter Cards-->
 	    <meta name="twitter:card" content="summary_large_image" />
 	    <meta name=”twitter:title” content=”Peridot Gem Event Planning Twitter Page”>
 	    <meta name=”twitter:description” content=”Peridot Gem Event Planning.”>
-	    <meta name=”twitter:image” content=”http://graysenterprise.com/images/favicon.png”>
-	    <meta name=”twitter:site” content=”@GraysEnterprise”>
+	    <meta name=”twitter:image” content=”http://images-media.info/images/peridotgemevents/img/favicon.png”>
+	    <meta name=”twitter:site” content=”@PeridotGem”>
 	    <meta name=”twitter:creator” content=”@casmong”>
-	    <meta name="twitter:url" content="http://dnl0vuaw1fqr6.cloudfront.net" />
+	    <meta name="twitter:url" content="http://peridotgemevents.com" />
 
 	    <!-- SEO meta tags - LinkedIn-->
 	    <meta prefix="og: http://ogp.me/ns#" property="og:title" content=”Peridot Gem Event Planning Home Page.” />
 	    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
-	    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://graysenterprise.com/images/favicon.png" />
-	    <meta prefix="og: http://ogp.me/ns#" property="og:url" content=”http://graysenterprise.com/images/favicon.png” />
+	    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
+	    <meta prefix="og: http://ogp.me/ns#" property="og:url" content=”http://images-media.info/images/peridotgemevents/img/favicon.png” />
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
@@ -74,6 +74,7 @@
 						    <ul class="navbar-nav">
 								<li><a href="#home">Home</a></li>
 								<li><a href="#service">Service</a></li>
+								<li><a href="#about">About Us</a></li>
 							    <li><a href="#contact">Contact Us</a></li>							
 						    </ul>
 						  </div>						
@@ -89,10 +90,10 @@
 					<div class="row fullscreen  d-flex align-items-center justify-content-end">
 						<div class="banner-content col-lg-12 col-md-12">
 							<h1>
-								<span>Peridot Gems</span><br> makes your <b><i>Event</i></b>
+								<span>Peridot Gems</span><br> We make your <b><i>Event</i></b>
 								<span>SPECIAL</span>.<br>
 							</h1>
-							<a href="#" class="primary-btn2 header-btn text-uppercase">Hire Us Now!</a>
+							<a href="#contact" class="primary-btn2 header-btn text-uppercase">Hire Us Now!</a>
 						</div>												
 					</div>
 				</div>
@@ -116,7 +117,7 @@
 							<span class="lnr lnr-rocket"></span>
 							<h4>Finding Location</h4>
 							<p>
-								We will find the best location for your event,.
+								We will find the best location for your event.
 							</p>
 							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
 						</div>
@@ -124,7 +125,7 @@
 							<span class="lnr lnr-magic-wand"></span>
 							<h4>Decorating</h4>
 							<p>
-								we are experst at creating themes and decorative crteations.
+								We are experts at creating themes and decorative creations.
 							</p>
 							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
 						</div>
@@ -132,7 +133,7 @@
 							<span class="lnr lnr-gift"></span>
 							<h4>Entertainment</h4>
 							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+								We provide the best music and entertainment for all your event needs.
 							</p>
 							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
 						</div>
@@ -140,7 +141,7 @@
 							<span class="lnr lnr-phone"></span>
 							<h4>Catering</h4>
 							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+								We will either make to order the food of your choice, or find a caterer to make your event special.
 							</p>
 							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
 						</div>																		
@@ -152,18 +153,23 @@
 
 
 			<!-- Start About Area -->
-			<section class="about-area">
+			<section class="about-area" id="about">
 				<div class="container-fluid">
 					<div class="row justify-content-end align-items-center d-flex no-padding">
 						<div class="col-lg-6 about-left mt-70">
-							<h1>Allow us to plan your <br>
-							special event</h1>
-							<p>
-								Planning events is difficult and time consuming. We will worry about the problems with planning your special events, so that you can focus on enjoying your event.
+							<h1>Allow us to plan your special event</h1>
+							<p style="color: #F6F2F9; font-weight: bolder; font-size: 24">
+
+								Peridot Gem is a purpose-built start-up company that provides party rentals, party supplies and event planning services to clients. We are a full-service event planning team and our goal is to help create breathtaking events that will give our clients %100 satisfaction. Many people have the idea to put on an event but do not have the first clue on where and how to start. Peridot Gem mends that gap by placing an ultimate lifesaving party central bridge suited for the clients’ unique style and true expressions. By doing this, we guarantee that customer satisfaction is our name and trendsetting is our game.</br><br>
+
+								Here at Peridot Gem we provide our clients with all their event essentials along with our dedication to meet their party needs to create the event that is desired. Customer satisfaction is what we strive for. </br><br>
+
+								The flash and excitement of impending extravaganzas can be intoxicating, it can also be overwhelming. This is where we step in and give each event the attention it needs.</br>
+
 							</p>
 							<div class="buttons">
 								<a href="#service" class="about-btn text-uppercase primary-border circle">What we offer</a>
-								<a href="#" class="about-btn text-uppercase  primary-border circle">Get a free quote</a>
+								<a href="#contact" class="about-btn text-uppercase  primary-border circle">Get a free quote</a>
 							</div>
 						</div>
 						<div class="col-lg-6 about-right">
@@ -213,7 +219,7 @@
 			        <div class="row">
 			          <div class="col-12 text-center mb-5" data-aos="fade-up" data-aos-delay="">
 			            <div class="block-heading-1">
-			              <span>Get In Touch</span>
+			              <span style="color: #7A1BBC; font-weight: bold;">Get In Touch</span>
 			              <h2>Contact Us</h2>
 			            </div>
 			          </div>
@@ -286,7 +292,7 @@
 		              <div class="col-md-4 ml-auto">
 		                <h2 class="footer-heading mb-4">Features</h2>
 		                <ul class="list-unstyled">
-		                  <li><a href="#home">About Us</a></li>
+		                  <li><a href="#about">About Us</a></li>
 		                  <li><a href="terms.html">Terms of Service</a></li>
 		                  <li><a href="privacy.html">Privacy</a></li>
 		                  <li><a href="#contact">Contact Us</a></li>
