--- a/error.html
+++ b/error.html
@@ -11,17 +11,17 @@
         <meta name="description" content=”Peridot Gem Event Planning.”>
         <meta name="keywords" content="Brooklyn, Events, New York, Planning">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="image_src" content="http://peridotgemevents.com/images/favicon.png" />
-        <meta name="image_url" content="http://peridotgemevents.com/images/favicon.png" />
+        <meta name="image_src" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
+        <meta name="image_url" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
         <meta property=”url” content=”http://peridotgemevents.com” />
-        <link rel="icon" type="image/png" href="http://peridotgemevents.com/images/favicon.png">
+        <link rel="icon" type="image/png" href="http://images-media.info/images/peridotgemevents/img/favicon.png">
 
 
         <!-- SEO meta tags - OpenGraph-->
         <meta property=”og:type” content=”website” />
         <meta property=”og:title” content=”Peridot Gem Event Planning Company Home Page.” />
         <meta property=”og:description” content=”Peridot Gem Event Planning ” />
-        <meta property="og:image" content="http://peridotgemevents.com/images/favicon.png"/>
+        <meta property="og:image" content="http://images-media.info/images/peridotgemevents/img/favicon.png"/>
         <meta property="og:image:height" content="100" />
         <meta property="og:image:width" content="100" />
         <meta property=”og:url” content=”http://peridotgemevents.com” />
@@ -31,16 +31,16 @@
         <meta name="twitter:card" content="summary_large_image" />
         <meta name=”twitter:title” content=”Peridot Gem Event Planning Twitter Page”>
         <meta name=”twitter:description” content=”Peridot Gem Event Planning.”>
-        <meta name=”twitter:image” content=”http://peridotgemevents.com/images/favicon.png”>
-        <meta name=”twitter:site” content=”@GraysEnterprise”>
+        <meta name=”twitter:image” content=”http://images-media.info/images/peridotgemevents/img/favicon.png”>
+        <meta name=”twitter:site” content=”@PeridotGems”>
         <meta name=”twitter:creator” content=”@casmong”>
-        <meta name="twitter:url" content="http://dnl0vuaw1fqr6.cloudfront.net" />
+        <meta name="twitter:url" content="http://peridotgemevents.com" />
 
         <!-- SEO meta tags - LinkedIn-->
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content=”Peridot Gem Event Planning Home Page.” />
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
-        <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://peridotgemevents.com/images/favicon.png" />
-        <meta prefix="og: http://ogp.me/ns#" property="og:url" content=”http://peridotgemevents.com/images/favicon.png” />
+        <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
+        <meta prefix="og: http://ogp.me/ns#" property="og:url" content=”http://images-media.info/images/peridotgemevents/img/favicon.png” />
 
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
             <!--
@@ -73,19 +73,10 @@
 
                       <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
                         <ul class="navbar-nav">
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#service">Service</a></li>
-                           <!-- Dropdown -->
-                            <li class="dropdown">
-                              <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                Pages
-                              </a>
-                              <div class="dropdown-menu">
-                                <a class="dropdown-item" href="generic.html">Generic</a>
-                                <a class="dropdown-item" href="elements.html">Elements</a>
-                              </div>
-                            </li>       
-                            <li><a href="#contact">Contact Us</a></li>
+                            <li><a href="index.html#home">Home</a></li>
+                            <li><a href="index.html#service">Service</a></li>
+                            <li><a href="index.html#about">About Us</a></li>
+                            <li><a href="index.html#contact">Contact Us</a></li>
                         
                         </ul>
                       </div>                        
@@ -124,10 +115,10 @@
                   <div class="col-md-4 ml-auto">
                     <h2 class="footer-heading mb-4">Features</h2>
                     <ul class="list-unstyled">
-                      <li><a href="#home">About Us</a></li>
+                      <li><a href="index.html#about">About Us</a></li>
                       <li><a href="terms.html">Terms of Service</a></li>
                       <li><a href="privacy.html">Privacy</a></li>
-                      <li><a href="#contact">Contact Us</a></li>
+                      <li><a href="index.html#contact">Contact Us</a></li>
                     </ul>
                   </div>
                 </div>
