--- a/privacy.html
+++ b/privacy.html
@@ -11,17 +11,17 @@
         <meta name="description" content=”Peridot Gem Event Planning.”>
         <meta name="keywords" content="Brooklyn, Events, New York, Planning">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="image_src" content="http://peridotgemevents.com/images/favicon.png" />
-        <meta name="image_url" content="http://peridotgemevents.com/images/favicon.png" />
+        <meta name="image_src" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
+        <meta name="image_url" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
         <meta property=”url” content=”http://peridotgemevents.com” />
-        <link rel="icon" type="image/png" href="http://peridotgemevents.com/images/favicon.png">
+        <link rel="icon" type="image/png" href="http://images-media.info/images/peridotgemevents/img/favicon.png">
 
 
         <!-- SEO meta tags - OpenGraph-->
         <meta property=”og:type” content=”website” />
         <meta property=”og:title” content=”Peridot Gem Event Planning Company Home Page.” />
         <meta property=”og:description” content=”Peridot Gem Event Planning ” />
-        <meta property="og:image" content="http://peridotgemevents.com/images/favicon.png"/>
+        <meta property="og:image" content="http://images-media.info/images/peridotgemevents/img/favicon.png"/>
         <meta property="og:image:height" content="100" />
         <meta property="og:image:width" content="100" />
         <meta property=”og:url” content=”http://peridotgemevents.com” />
@@ -31,7 +31,7 @@
         <meta name="twitter:card" content="summary_large_image" />
         <meta name=”twitter:title” content=”Peridot Gem Event Planning Twitter Page”>
         <meta name=”twitter:description” content=”Peridot Gem Event Planning.”>
-        <meta name=”twitter:image” content=”http://peridotgemevents.com/images/favicon.png”>
+        <meta name=”twitter:image” content=”http://images-media.info/images/peridotgemevents/img/favicon.png”>
         <meta name=”twitter:site” content=”@GraysEnterprise”>
         <meta name=”twitter:creator” content=”@casmong”>
         <meta name="twitter:url" content="http://dnl0vuaw1fqr6.cloudfront.net" />
@@ -39,8 +39,8 @@
         <!-- SEO meta tags - LinkedIn-->
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content=”Peridot Gem Event Planning Home Page.” />
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
-        <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://peridotgemevents.com/images/favicon.png" />
-        <meta prefix="og: http://ogp.me/ns#" property="og:url" content=”http://peridotgemevents.com/images/favicon.png” />
+        <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://images-media.info/images/peridotgemevents/img/favicon.png" />
+        <meta prefix="og: http://ogp.me/ns#" property="og:url" content=”http://images-media.info/images/peridotgemevents/img/favicon.png” />
 
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
             <!--
@@ -75,6 +75,7 @@
                             <ul class="navbar-nav">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="index.html#service">Service</a></li>
+                                <li><a href="index.html#about">About Us</a></li>
                                 <li><a href="index.html#contact">Contact Us</a></li>                            
                             </ul>
                           </div>                        
@@ -155,7 +156,7 @@
                       <div class="col-md-4 ml-auto">
                         <h2 class="footer-heading mb-4">Features</h2>
                         <ul class="list-unstyled">
-                          <li><a href="index.html#about-section">About Us</a></li>
+                          <li><a href="index.html#about">About Us</a></li>
                           <li><a href="terms.html">Terms of Service</a></li>
                           <li><a href="privacy.html">Privacy</a></li>
                           <li><a href="index.html#contact">Contact Us</a></li>
