--- a/error.html
+++ b/error.html
@@ -88,7 +88,7 @@
       <section class="gray-bg section-padding" id="feature-page">
           <div class="container">
               <div class="row">
-                  <div>
+                  <div style="padding-top: 100px">
 
                       <h3>Our website is currently encountering difficulties. Kindly reach out to us directly: </h3><br />
 
