--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 						    <ul class="navbar-nav">
 								<li><a href="#home">Home</a></li>
 								<li><a href="#service">Service</a></li>
-								<li><a href="#about">About Us</a></li>
-							    <li><a href="#contact">Contact Us</a></li>							
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="#about">About</a></li>
+							    <li><a href="#contact">Contact</a></li>							
 						    </ul>
 						  </div>						
 					</div>
