--- a/terms.html
+++ b/terms.html
@@ -75,8 +75,9 @@
                             <ul class="navbar-nav">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="index.html#service">Service</a></li>
-                                <li><a href="index.html#about">About Us</a></li>
-                                <li><a href="index.html#contact">Contact Us</a></li>                            
+                                <li><a href="gallery.html">Gallery</a></li>                                
+                                <li><a href="index.html#about">About</a></li>
+                                <li><a href="index.html#contact">Contact</a></li>                            
                             </ul>
                           </div>                        
                     </div>
