footer icons and Gems rerord

--- a/error.html
+++ b/error.html
@@ -2,7 +2,7 @@
     <html lang="zxx" class="no-js">
     <head>
 
-        <title>Peridot Gems Events Planning</title>
+        <title>Peridot Gem Events Planning</title>
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,7 +32,7 @@
         <meta name=”twitter:title” content=”Peridot Gem Event Planning Twitter Page”>
         <meta name=”twitter:description” content=”Peridot Gem Event Planning.”>
         <meta name=”twitter:image” content=”http://images-media.info/images/peridotgemevents/img/favicon.png”>
-        <meta name=”twitter:site” content=”@PeridotGems”>
+        <meta name=”twitter:site” content=”@PeridotGem”>
         <meta name=”twitter:creator” content=”@casmong”>
         <meta name="twitter:url" content="http://peridotgemevents.com" />
 
@@ -60,7 +60,7 @@
             <nav class="navbar navbar-expand-lg  navbar-light">
                 <div class="container">
                       <a class="navbar-brand" href="index.html">
-                        <b>Peridot Gems</b>
+                        <b>Peridot Gem</b>
                       </a>
                       <div class="col-5">
                           <a href="mailto:periodotgemllc@gmail.com" class=""><span class="mr-2  icon-envelope-open-o"></span> <span class="d-none d-md-inline-block">periodotgemllc@gmail.com</span></a>
@@ -103,8 +103,8 @@
           </div>
       </section>
 
-      <!-- start footer Area -->  
-      <footer class="footer-area section-gap">
+        <!-- start footer Area -->  
+        <footer class="footer-area section-gap">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -114,7 +114,7 @@
                     <p>Peridot Gem Events provides excellent event planning: catering, music and entertainment, for all your event needs, and at an affordable rate. </p>
                   </div>
                   <div class="col-md-4 ml-auto">
-                    <h2 class="footer-heading mb-4">Features</h2>
+                    <h2 class="footer-heading mb-4" style="color: blue">Features</h2>
                     <ul class="list-unstyled">
                       <li><a href="index.html#about">About Us</a></li>
                       <li><a href="terms.html">Terms of Service</a></li>
@@ -125,13 +125,13 @@
                 </div>
               </div>
               <div class="col-md-4 ml-auto">
-
-                <h2 class="footer-heading mb-4">Follow Us</h2>
-                <a href="#about-section" class="smoothscroll pl-0 pr-3"><span class="icon-facebook"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-                </form>
+                <h2 class="footer-heading mb-4" style="color: blue" >Follow Us</h2>
+                <ul class="row" style="padding-left: 20px">
+                  <li><a href="http://tumblr.com" class="icoTumblr" title="Tumblr"><i class="fa fa-tumblr" style="padding-right: 30px"></i></a></li>
+                  <li><a href="http://facebook.com" class="icoFacebook" title="Facebook"><i class="fa fa-facebook" style="padding-right: 30px"></i></a></li>
+                  <li><a href="http://twitter.com" class="icoTwitter" title="Twitter"><i class="fa fa-twitter" style="padding-right: 30px"></i></a></li>
+                  <li><a href="http://instagram.com" class="icoInstagram" title="Instagram"><i class="fa fa-instagram" style="padding-right: 30px"></i></a></li>
+                </ul>
               </div>
             </div>
             <div class="row pt-5 mt-5 text-center">
