--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html lang="zxx" class="no-js">
 	<head>
 
-		<title>Peridot Gems Events Planning</title>
+		<title>Peridot Gem Events Planning</title>
 
 	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -60,7 +60,7 @@
 				<nav class="navbar navbar-expand-lg  navbar-light">
 					<div class="container">
 						  <a class="navbar-brand" href="index.html">
-						  	<b>Peridot Gems</b>
+						  	<b>Peridot Gem</b>
 						  </a>
 						  <div class="col-5">
 					  		<a href="mailto:periodotgemllc@gmail.com" class=""><span class="d-none d-md-inline-block">periodotgemllc@gmail.com</span></a>
@@ -91,7 +91,7 @@
 					<div class="row fullscreen  d-flex align-items-center justify-content-end">
 						<div class="banner-content col-lg-12 col-md-12">
 							<h1>
-								<span>Peridot Gems</span><br> We make your <b><i>Event</i></b>
+								<span>Peridot Gem</span><br> We make your <b><i>Event</i></b>
 								<span>SPECIAL</span>.<br>
 							</h1>
 							<a href="#contact" class="primary-btn2 header-btn text-uppercase">Hire Us Now!</a>
@@ -280,48 +280,48 @@
 			</section>
 			<!-- End testimonial Area -->
 			
-			<!-- start footer Area -->	
-			<footer class="footer-area section-gap">
-		      <div class="container">
-		        <div class="row">
-		          <div class="col-md-6">
-		            <div class="row">
-		              <div class="col-md-7">
-		                <h2 class="footer-heading mb-4" style="color: blue">About Us</h2>
-		                <p>Peridot Gem Events provides excellent event planning: catering, music and entertainment, for all your event needs, and at an affordable rate. </p>
-		              </div>
-		              <div class="col-md-4 ml-auto">
-		                <h2 class="footer-heading mb-4">Features</h2>
-		                <ul class="list-unstyled">
-		                  <li><a href="#about">About Us</a></li>
-		                  <li><a href="terms.html">Terms of Service</a></li>
-		                  <li><a href="privacy.html">Privacy</a></li>
-		                  <li><a href="#contact">Contact Us</a></li>
-		                </ul>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-4 ml-auto">
-
-		            <h2 class="footer-heading mb-4">Follow Us</h2>
-		            <a href="#about-section" class="smoothscroll pl-0 pr-3"><span class="icon-facebook"></span></a>
-		            <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-		            <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-		            <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-		            </form>
-		          </div>
-		        </div>
-		        <div class="row pt-5 mt-5 text-center">
-		          <div class="col-md-12">
-		            <div class="border-top pt-5">
-		              <p class="copyright">
-		            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Peridot Gem Events. All rights reserved </a>
-		            </p>
-		            </div>
-		          </div>
-		        </div>
-		      </div>
-		    </footer>
+            <!-- start footer Area -->  
+            <footer class="footer-area section-gap">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-md-7">
+                        <h2 class="footer-heading mb-4" style="color: blue">About Us</h2>
+                        <p>Peridot Gem Events provides excellent event planning: catering, music and entertainment, for all your event needs, and at an affordable rate. </p>
+                      </div>
+                      <div class="col-md-4 ml-auto">
+                        <h2 class="footer-heading mb-4" style="color: blue">Features</h2>
+                        <ul class="list-unstyled">
+                          <li><a href="index.html#about">About Us</a></li>
+                          <li><a href="terms.html">Terms of Service</a></li>
+                          <li><a href="privacy.html">Privacy</a></li>
+                          <li><a href="index.html#contact">Contact Us</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 ml-auto">
+                    <h2 class="footer-heading mb-4" style="color: blue" >Follow Us</h2>
+                    <ul class="row" style="padding-left: 20px">
+                      <li><a href="http://tumblr.com" class="icoTumblr" title="Tumblr"><i class="fa fa-tumblr" style="padding-right: 30px"></i></a></li>
+                      <li><a href="http://facebook.com" class="icoFacebook" title="Facebook"><i class="fa fa-facebook" style="padding-right: 30px"></i></a></li>
+                      <li><a href="http://twitter.com" class="icoTwitter" title="Twitter"><i class="fa fa-twitter" style="padding-right: 30px"></i></a></li>
+                      <li><a href="http://instagram.com" class="icoInstagram" title="Instagram"><i class="fa fa-instagram" style="padding-right: 30px"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="row pt-5 mt-5 text-center">
+                  <div class="col-md-12">
+                    <div class="border-top pt-5">
+                      <p class="copyright">
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> Peridot Gem Events. All rights reserved </a>
+                    </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </footer>
 			<!-- End footer Area -->		
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
