--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
     <html lang="zxx" class="no-js">
     <head>
 
-        <title>Peridot Gems Events Planning</title>
+        <title>Peridot Gem Events Planning</title>
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
         <meta name=”twitter:image” content=”http://images-media.info/images/peridotgemevents/img/favicon.png”>
         <meta name=”twitter:site” content=”@GraysEnterprise”>
         <meta name=”twitter:creator” content=”@casmong”>
-        <meta name="twitter:url" content="http://dnl0vuaw1fqr6.cloudfront.net" />
+        <meta name="twitter:url" content="http://peridotgemevents.com" />
 
         <!-- SEO meta tags - LinkedIn-->
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content=”Peridot Gem Event Planning Home Page.” />
@@ -53,9 +53,8 @@
             <link rel="stylesheet" href="css/jquery.DonutWidget.min.css">
             <link rel="stylesheet" href="css/bootstrap.css">
             <link rel="stylesheet" href="css/owl.carousel.css">
-            <link rel="stylesheet" href="css/main.css">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
+            <link rel="stylesheet" href="css/main.css">
         </head>
         <body>
 
@@ -63,8 +62,8 @@
             <header class="default-header">
                 <nav class="navbar navbar-expand-lg  navbar-light">
                     <div class="container">
-                          <a class="navbar-brand" href="index.html">
-                            <b>Peridot Gems</b>
+                          <a class="navbar-brand" href="index.html" style="font: sans-serif; font-weight: lighter;font-size: 1.95rem">
+                            <b>Peridot Gem</b>
                           </a>
                           <div class="col-5">
                               <a href="mailto:periodotgemllc@gmail.com" class=""><span class="mr-2  icon-envelope-open-o"></span> <span class="d-none d-md-inline-block">periodotgemllc@gmail.com</span></a>
@@ -182,7 +181,7 @@
                         <p>Peridot Gem Events provides excellent event planning: catering, music and entertainment, for all your event needs, and at an affordable rate. </p>
                       </div>
                       <div class="col-md-4 ml-auto">
-                        <h2 class="footer-heading mb-4">Features</h2>
+                        <h2 class="footer-heading mb-4" style="color: blue">Features</h2>
                         <ul class="list-unstyled">
                           <li><a href="index.html#about">About Us</a></li>
                           <li><a href="terms.html">Terms of Service</a></li>
@@ -193,13 +192,13 @@
                     </div>
                   </div>
                   <div class="col-md-4 ml-auto">
-
-                    <h2 class="footer-heading mb-4">Follow Us</h2>
-                    <a href="index.html#about-section" class="smoothscroll pl-0 pr-3"><span class="icon-facebook"></span></a>
-                    <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                    <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-                    </form>
+                    <h2 class="footer-heading mb-4" style="color: blue" >Follow Us</h2>
+                    <ul class="row" style="padding-left: 20px">
+                      <li><a href="http://tumblr.com" class="icoTumblr" title="Tumblr"><i class="fa fa-tumblr" style="padding-right: 30px"></i></a></li>
+                      <li><a href="http://facebook.com" class="icoFacebook" title="Facebook"><i class="fa fa-facebook" style="padding-right: 30px"></i></a></li>
+                      <li><a href="http://twitter.com" class="icoTwitter" title="Twitter"><i class="fa fa-twitter" style="padding-right: 30px"></i></a></li>
+                      <li><a href="http://instagram.com" class="icoInstagram" title="Instagram"><i class="fa fa-instagram" style="padding-right: 30px"></i></a></li>
+                    </ul>
                   </div>
                 </div>
                 <div class="row pt-5 mt-5 text-center">
