--- a/index.html
+++ b/index.html
@@ -74,7 +74,16 @@
 						    <ul class="navbar-nav">
 								<li><a href="#home">Home</a></li>
 								<li><a href="#service">Service</a></li>
-								<li><a href="gallery.html">Gallery</a></li>
+							    <!-- Dropdown -->
+							    <li class="dropdown">
+							      <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+							        Gallery
+							      </a>
+							      <div class="dropdown-menu">
+							        <a class="dropdown-item" href="images.html">Images</a>
+							        <a class="dropdown-item" href="videos.html">Video</a>
+							      </div>
+							    </li>		
 								<li><a href="#about">About</a></li>
 							    <li><a href="#contact">Contact</a></li>							
 						    </ul>
