--- a/privacy.html
+++ b/privacy.html
@@ -75,7 +75,16 @@
                             <ul class="navbar-nav">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="index.html#service">Service</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
+                                <!-- Dropdown -->
+                                <li class="dropdown">
+                                  <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                    Gallery
+                                  </a>
+                                  <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="images.html">Images</a>
+                                    <a class="dropdown-item" href="videos.html">Video</a>
+                                  </div>
+                                </li>   
                                 <li><a href="index.html#about">About</a></li>
                                 <li><a href="index.html#contact">Contact</a></li>                            
                             </ul>
