--- a/service_request.html
+++ b/service_request.html
@@ -72,155 +72,13 @@
 
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
-								<li><a href="#home">Home</a></li>
-								<li><a href="#service">Service</a></li>
-							    <!-- Dropdown -->
-							    <li class="dropdown">
-							      <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-							        Gallery
-							      </a>
-							      <div class="dropdown-menu">
-							        <a class="dropdown-item" href="images.html">Images</a>
-							        <a class="dropdown-item" href="videos.html">Video</a>
-							      </div>
-							    </li>		
-								<li><a href="#about">About</a></li>
-							    <li><a href="#contact">Contact</a></li>							
+								<li><a href="index.html">Home</a></li>					
 						    </ul>
 						  </div>						
 					</div>
 				</nav>
 			</header>
 			<!-- End Header Area -->
-
-			<!-- start banner Area -->
-			<section class="banner-area relative" id="home" data-parallax="scroll" data-image-src="img/header-bg.jpg">
-				<div class="overlay-bg overlay"></div>
-				<div class="container">
-					<div class="row fullscreen  d-flex align-items-center justify-content-end">
-						<div class="banner-content col-lg-12 col-md-12">
-							<h1>
-								<span>Peridot Gem</span><br> We make your <b><i>Event</i></b>
-								<span>SPECIAL</span>.<br>
-							</h1>
-							<a href="service_request.html" class="primary-btn2 header-btn text-uppercase">Hire Us Now!</a>
-						</div>												
-					</div>
-				</div>
-			</section>
-			<!-- End banner Area -->	
-
-			
-			<!-- start service Area-->
-			<section class="service-area pt-100 pb-150" id="service">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="menu-content pb-70 col-lg-8">
-							<div class="title text-center">
-								<h1 class="mb-10">Services we offer</h1>
-								<p>We take the hassle out of planning your special event. Leave the headache to us, and enjoy your special day.</p>
-							</div>
-						</div>
-					</div>	
-					<div class="row">
-						<div class="sigle-service col-lg-3 col-md-6">
-							<span class="lnr lnr-rocket"></span>
-							<h4>Finding Location</h4>
-							<p>
-								We will find the best location for your event.
-							</p>
-							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
-						</div>
-						<div class="sigle-service col-lg-3 col-md-6">
-							<span class="lnr lnr-magic-wand"></span>
-							<h4>Decorating</h4>
-							<p>
-								We are experts at creating themes and decorative creations.
-							</p>
-							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
-						</div>
-						<div class="sigle-service col-lg-3 col-md-6">
-							<span class="lnr lnr-gift"></span>
-							<h4>Entertainment</h4>
-							<p>
-								We provide the best music and entertainment for all your event needs.
-							</p>
-							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
-						</div>
-						<div class="sigle-service col-lg-3 col-md-6">
-							<span class="lnr lnr-phone"></span>
-							<h4>Catering</h4>
-							<p>
-								We will either make to order the food of your choice, or find a caterer to make your event special.
-							</p>
-							<a href="#" class="text-uppercase primary-btn2 primary-border circle">View Details</a>
-						</div>																		
-
-					</div>
-				</div>	
-			</section>
-			<!-- end service Area-->
-
-
-			<!-- Start About Area -->
-			<section class="about-area" id="about">
-				<div class="container-fluid">
-					<div class="row justify-content-end align-items-center d-flex no-padding">
-						<div class="col-lg-6 about-left mt-70">
-							<h1>Allow us to plan your special event</h1>
-							<p style="color: #F6F2F9; font-weight: bolder; font-size: 24">
-
-								Peridot Gem is a purpose-built start-up company that provides party rentals, party supplies and event planning services to clients. We are a full-service event planning team and our goal is to help create breathtaking events that will give our clients %100 satisfaction. Many people have the idea to put on an event but do not have the first clue on where and how to start. Peridot Gem mends that gap by placing an ultimate lifesaving party central bridge suited for the clients’ unique style and true expressions. By doing this, we guarantee that customer satisfaction is our name and trendsetting is our game.</br><br>
-
-								Here at Peridot Gem we provide our clients with all their event essentials along with our dedication to meet their party needs to create the event that is desired. Customer satisfaction is what we strive for. </br><br>
-
-								The flash and excitement of impending extravaganzas can be intoxicating, it can also be overwhelming. This is where we step in and give each event the attention it needs.</br>
-
-							</p>
-							<div class="buttons">
-								<a href="#service" class="about-btn text-uppercase primary-border circle">What we offer</a>
-								<a href="#contact" class="about-btn text-uppercase  primary-border circle">Get a free quote</a>
-							</div>
-						</div>
-						<div class="col-lg-6 about-right">
-							<img class="img-fluid" src="img/about.png" alt="">
-						</div>
-					</div>
-				</div>	
-			</section>
-			<!-- End About Area -->
-
-			<!-- Start skill Area -->
-			<section class="skill-area section-gap">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 skill-left">
-							<h1 class="text-white mb-30">Our Fields of Expertise</h1>
-							<p>
-								
-							</p>
-						</div>
-						<div class="col-lg-6 skill-right">
-							<div class="row d-flex justify-content-center">
-								<div class="col-lg-4 col-md-4 single-skill">
-									<div class="skill1 d-block mx-auto"></div>
-									<h4>Planning and Scheduling</h4>
-								</div>
-								<div class="col-lg-4 col-md-4 single-skill">
-									<div class="skill2 d-block mx-auto"></div>
-									<h4>Food and Catering</h4>
-								</div>
-								<div class="col-lg-4 col-md-4 single-skill">
-									<div class="skill3 d-block mx-auto"></div>
-									<h4>Music and Entertainment</h4>
-								</div>																
-							</div>
-						</div>
-					</div>
-				</div>	
-			</section>
-			<!-- End skill Area -->
-			
 
 			<!-- Start testimonial Area -->
 			<section class="testimonial-area relative section-gap" id="contact">
@@ -229,14 +87,13 @@
 			        <div class="row">
 			          <div class="col-12 text-center mb-5" data-aos="fade-up" data-aos-delay="">
 			            <div class="block-heading-1">
-			              <span style="color: #7A1BBC; font-weight: bold;">Get In Touch</span>
-			              <h2>Contact Us</h2>
+			              <h2>Service Request</h2>
 			            </div>
 			          </div>
 			        </div>
 			        <div class="row">
 			          <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-			            <form method="post" name="contact-form" id="contact-form">
+			            <form method="post" name="request-form" id="request-form">
 			              <div class="form-group row">
 			                <div class="col-md-6 mb-4 mb-lg-0">
 			                  <input type="text" class="form-control" placeholder="First name" id="fname">
@@ -248,25 +105,39 @@
 
 			              <div class="form-group row">
 			                <div class="col-md-12">
-			                  <input type="text" class="form-control" placeholder="Subject" id="subject">
-			                </div>
-			              </div> 
-
-			              <div class="form-group row">
-			                <div class="col-md-12">
 			                  <input type="text" class="form-control" placeholder="Email address" id="email">
 			                </div>
 			              </div>
 
 			              <div class="form-group row">
 			                <div class="col-md-12">
-			                  <textarea name="message" id="message" class="form-control" placeholder="Write your message." cols="30" rows="10"></textarea>
+			                  <input type="text" class="form-control" placeholder="Phone" id="phone">
+			                </div>
+			              </div>
+
+			              <div class="form-group row">
+			                <div class="col-md-12">
+			                  <input type="text" class="form-control" placeholder="Location address" id="address">
+			                </div>
+			              </div>
+
+			              <div class="form-group row">
+			                <div class="col-md-12">
+			                	<label>Service Date:	
+			                  		<input type="date" class="form-control" placeholder="Service date" id="service_date">
+    							</label>
+			                </div>
+			              </div>			              
+
+			              <div class="form-group row">
+			                <div class="col-md-12">
+			                  <textarea name="message" id="message" class="form-control" placeholder="Specify additional details." cols="30" rows="10"></textarea>
 			                </div>
 			              </div>
 
 			              <div class="form-group row">
 			                <div class="col-md-6 mr-auto">
-			                  <input type="submit" class="btn btn-block btn-primary text-white py-3 px-5" value="Send Message" form="contact-form">
+			                  <input type="submit" class="btn btn-block btn-primary text-white py-3 px-5" value="Send Request" form="request-form">
 			                </div>
 			              </div>
 
@@ -342,7 +213,7 @@
 			<script src="js/jquery.sticky.js"></script>
 			<script src="js/jquery.DonutWidget.min.js"></script>
 			<script src="js/jquery.magnific-popup.min.js"></script>		
-			<script src="js/contact-form.js"></script>	
+			<script src="js/request-form.js"></script>	
 			<script src="js/main.js"></script>	
 		</body>
 	</html>
